# Graph-Signatures-of-Deceptive-Circuits-LLMs

./: .gitignore  LICENSE  README.md  deceptive_circuit_structure_plan.md  pyproject.toml
configs/: default.yaml
prompts/: confabulation.jsonl  honest_factual.jsonl  sycophantic.jsonl
scripts/: 01_smoke_load_sae.py  02_extract_coactivation_demo.py  03_compute_measures_csv.py  04_build_condition_graphs.py  05_compute_master_dataframe.py  05b_patch_max_clique.py  06_statistical_analysis.py  07_train_classifier.py
src/circuit_structure/: __init__.py  activations.py  coactivation.py  config.py  graph_measures.py  io_utils.py  logging_setup.py  prompts.py  sae_loader.py  treewidth_fast.py
